# new_admin_panel_sprint_3

./: .env.example  .flake8  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  uwsgi.ini
backend/config/: settings.py
backend/config/components/: application.py  locale.py  logging.py  security.py
backend/movies/: admin.py  apps.py  mixins.py  models.py
backend/movies/api/v1/: urls.py  views.py
backend/movies/locale/en/LC_MESSAGES/: django.mo  django.po
backend/movies/locale/ru/LC_MESSAGES/: django.mo  django.po
backend/movies/migrations/: 0001_initial.py  0002_alter_personfilmwork_role.py
data/: data.dump
etl/: Dockerfile  data_helpers.py  elasticsearch.py  logger.py  main.py  pg_extractor.py  postgres_connector.py  pyproject.toml  settings.py  state.py  utils.py
html/: 404.html  50x.html
nginx/: nginx.conf  site.conf
postgres/: Dockerfile
